refactor: strongly-typed queries, unified repositories, JDK/Lombok modernizations
- Blaze + QueryDSL: Add BlazeQueryDSLSupport, Q-types for User/Role/Permission/PermissionGroup
- Metamodel: Replace string literals with Sys*_.field.getName() in find/count and sort mappings
- SortFieldMapper: Extract sort field mapping to query.sort package, use enum singletons
- Unified repositories: Merge Blaze*QueryRepository into *Repository (User, Role, Permission, PermissionGroup)
- Remove BaseBlazeQueryRepository, BaseEntityViewQueryRepository, Panache*QueryRepository
- Constructor injection: Use Lombok @RequiredArgsConstructor(onConstructor_ = @Inject) where applicable
- JDK 21+ switch: GlobalExceptionHandler, BlazeQueryDSLSupport, BaseMetamodelQueryBuilder
- Method refs: ConstraintViolation::getMessage, Instant.now()::isBefore
- FlywayMigration: Replace deprecated @__(@Inject) with onConstructor_ = @Inject

Made-with: Cursor